지난달 추가

--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <title>오늘도청춘 관리자페이지</title>
   <meta name="description" content="오늘도청춘 관리자페이지를 통해 시니어의 활동을 확인하세요.">
 
   <!-- iOS meta tags & icons -->
@@ -31,8 +32,22 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
   <!-- <link rel="icon" type="image/png" href="assets/woman_icon.png"/> -->
 
-  <title>onldocc_admin</title>
   <link rel="manifest" href="manifest.json">
+  <meta property="og:type" content="website" />
+  <meta
+  property="og:site_name"
+  content="오늘도청춘 관리자페이지" />
+  <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/chungchunon-android-dd695.appspot.com/o/missions%2F%E1%84%8B%E1%85%A1%E1%84%8B%E1%85%B5%E1%84%8F%E1%85%A9%E1%86%AB_%E1%84%8B%E1%85%B5%E1%84%86%E1%85%B5%E1%84%8C%E1%85%B5_%E1%84%91%E1%85%B5%E1%86%BC%E1%84%8F%E1%85%B32.png?alt=media&token=0ffe5480-4d88-42c0-be29-f7d366bb62d5" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:url" content="https://onldocc-admin.com" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="ko_KR" />
+  <meta
+  name="og:description"
+  content="오늘도청춘 관리자페이지를 통해 시니어의 활동을 확인하세요." />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/meta_img.png" />
 
   <script>
     // The value below is injected by flutter build, do not touch.
