--- a/web/index.html
+++ b/web/index.html
@@ -20,8 +20,8 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <title>오늘도청춘 관리자페이지</title>
-  <meta name="description" content="오늘도청춘 관리자페이지를 통해 시니어의 활동을 확인하세요.">
+  <title>인지케어 관리자페이지</title>
+  <meta name="description" content="인지케어 관리자페이지를 통해 시니어의 활동을 확인하세요.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -37,7 +37,7 @@
   <meta property="og:type" content="website" />
   <meta
   property="og:site_name"
-  content="오늘도청춘 관리자페이지" />
+  content="인지케어 관리자페이지" />
   <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/chungchunon-android-dd695.appspot.com/o/missions%2F%E1%84%8B%E1%85%A1%E1%84%8B%E1%85%B5%E1%84%8F%E1%85%A9%E1%86%AB_%E1%84%8B%E1%85%B5%E1%84%86%E1%85%B5%E1%84%8C%E1%85%B5_%E1%84%91%E1%85%B5%E1%86%BC%E1%84%8F%E1%85%B32.png?alt=media&token=0ffe5480-4d88-42c0-be29-f7d366bb62d5" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
@@ -47,7 +47,7 @@
   <meta property="og:locale" content="ko_KR" />
   <meta
   name="og:description"
-  content="오늘도청춘 관리자페이지를 통해 시니어의 활동을 확인하세요." />
+  content="인지케어 관리자페이지를 통해 시니어의 활동을 확인하세요." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/meta_img.png" />
 
   <script>
