--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:url" content="https://onldocc-admin.com" />
+  <meta property="og:url" content="https://injicare-admin.com" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ko_KR" />
   <meta
