--- a/web/index.html
+++ b/web/index.html
@@ -21,10 +21,7 @@
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
     <title>인지케어 관리자페이지</title>
-    <meta
-      name="description"
-      content="인지케어 관리자페이지를 통해 시니어의 활동을 확인하세요."
-    />
+    <meta name="description" content="시니어의 활동을 확인하세요." />
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -41,7 +38,7 @@
     <meta property="og:site_name" content="인지케어 관리자페이지" />
     <meta
       property="og:image"
-      content="https://firebasestorage.googleapis.com/v0/b/chungchunon-android-dd695.appspot.com/o/missions%2F%E1%84%8B%E1%85%A1%E1%84%8B%E1%85%B5%E1%84%8F%E1%85%A9%E1%86%AB_%E1%84%8B%E1%85%B5%E1%84%86%E1%85%B5%E1%84%8C%E1%85%B5_%E1%84%91%E1%85%B5%E1%86%BC%E1%84%8F%E1%85%B32.png?alt=media&token=0ffe5480-4d88-42c0-be29-f7d366bb62d5"
+      content="https://firebasestorage.googleapis.com/v0/b/chungchunon-android-dd695.appspot.com/o/icons%2Foc_image2.png?alt=media&token=55660135-9130-4528-bfcd-9826ce54216b&_gl=1*8rpior*_ga*Njg0Njk4NzQ3LjE2NzIxNDIzNDk.*_ga_CW55HF8NVT*MTY5OTE5NTE2Ny41MDguMS4xNjk5MTk3OTM0LjMwLjAuMA.."
     />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
@@ -49,10 +46,7 @@
     <meta property="og:url" content="https://injicare-admin.com" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
-    <meta
-      name="og:description"
-      content="인지케어 관리자페이지를 통해 시니어의 활동을 확인하세요."
-    />
+    <meta name="og:description" content="시니어의 활동을 확인하세요." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/meta_img.png" />
 
     <script>
