--- a/web/index.html
+++ b/web/index.html
@@ -48,6 +48,10 @@
     <meta property="og:locale" content="ko_KR" />
     <meta name="og:description" content="시니어의 활동을 확인하세요." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/meta_img.png" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
 
     <script>
       // The value below is injected by flutter build, do not touch.
