--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,31 @@
 
     <title>onldocc_admin</title>
     <link rel="manifest" href="manifest.json" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="인지케어 관리자페이지" />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/chungchunon-android-dd695.appspot.com/o/icons%2Foc_image2.png?alt=media&token=55660135-9130-4528-bfcd-9826ce54216b&_gl=1*8rpior*_ga*Njg0Njk4NzQ3LjE2NzIxNDIzNDk.*_ga_CW55HF8NVT*MTY5OTE5NTE2Ny41MDguMS4xNjk5MTk3OTM0LjMwLjAuMA.."
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://injicare-admin.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta name="og:description" content="시니어의 활동을 확인하세요." />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/meta_img.png" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
+
+    <script>
+      // The value below is injected by flutter build, do not touch.
+      var serviceWorkerVersion = null;
+    </script>
+    <!-- This script adds the flutter initialization JS code -->
+    <script src="flutter.js" defer></script>
   </head>
   <body>
     <script src="flutter_bootstrap.js" async></script>
