--- a/web/index.html
+++ b/web/index.html
@@ -4,21 +4,21 @@
     <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
-
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
-
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <base href="$FLUTTER_BASE_HREF" />
+    <!-- <base href="$FLUTTER_BASE_HREF"> -->
+    <!-- <base href="/onldocc_admin/" /> -->
+    <base href="./" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
-    <meta name="description" content="A new Flutter project." />
+    <title>인지케어 관리자페이지</title>
+    <meta name="description" content="시니어의 활동을 확인하세요." />
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -28,8 +28,8 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png" />
+    <!-- <link rel="icon" type="image/png" href="assets/woman_icon.png"/> -->
 
-    <title>onldocc_admin</title>
     <link rel="manifest" href="manifest.json" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="인지케어 관리자페이지" />
@@ -58,9 +58,22 @@
     <script src="flutter.js" defer></script>
   </head>
   <body>
-    <script src="flutter_bootstrap.js" async></script>
-    <script type="text/javascript">
-      window.flutterWebRenderer = "html";
+    <script>
+      window.addEventListener("load", function (ev) {
+        // Download main.dart.js
+        _flutter.loader.loadEntrypoint({
+          serviceWorker: {
+            serviceWorkerVersion: serviceWorkerVersion,
+          },
+          onEntrypointLoaded: function (engineInitializer) {
+            engineInitializer
+              .initializeEngine({ renderer: "html" })
+              .then(function (appRunner) {
+                appRunner.runApp();
+              });
+          },
+        });
+      });
     </script>
   </body>
 </html>
