--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
   -->
     <!-- <base href="$FLUTTER_BASE_HREF"> -->
     <!-- <base href="/onldocc_admin/" /> -->
-    <base href="./" />
+    <base href="/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
